--- a/style.css
+++ b/style.css
@@ -21,9 +21,13 @@
         justify-content: center;
         margin: 0;
     }
-    @media  screen and (max-width: 414px) and (min-width: 300px)  {
+    @media  screen and (max-width: 767px){
         body{
             display:inline-block;
+            width: 100%;
+        }
+        .card {
+          width: 100%;
         }
         /* chua responsive :) */
     }
